gcc/testsuite/gdc.test/compilable/imports/test16709b.d
module test16709b;
public:

import imports.test16709c;
import imports.test16709d;
