gcc/testsuite/gdc.test/fail_compilation/imports/a314.d
module imports.a314;

static import imports.c314;
import renamed = imports.c314;
import imports.c314 : bug;
